fix alignment for heading

--- a/src/App.css
+++ b/src/App.css
@@ -25,6 +25,11 @@ hr {
   color: #067ED7;
   padding-left: 0.5em;
 }
+
+.herstonHeading h1 {
+  margin-top: 0.3em;
+}
+
 .logoInfo {
   height: auto;
   width: auto;
@@ -65,10 +70,10 @@ li {
 
 .mainLinks {
   text-decoration: none;
-  color: black;
-  border: 1px solid black;
+  color: white;
   padding: 0.7em;
-  /* border-radius: 5px; */
+  border-radius: 5px;
+  background-color: #067ED7;
   opacity: 1;
   display: block;
   width: 6em;
@@ -76,6 +81,8 @@ li {
 
 .mainLinks:focus, .mainLinks:hover {
   opacity: 0.6;
+  background-color: #fed800;
+  transition: background-color ease 0.3s;
 }
 
 /* Padding for main pages */
